--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,6 +1,76 @@
-<% provide(:page_title, 'Todas las Publicaciones') %>
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Today Flats a Real Estate Category Flat Bootstrap Responsive Web Template| Home :: w3layouts</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Today Flats Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+	SmartPhone Compatible web template, free web designs for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!-- Custom Theme files -->
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="css/style.css" rel='stylesheet' type='text/css' /> 
+<link rel="stylesheet" href="css/smoothbox.css" type='text/css' >
+<!-- //Custom Theme files -->
+<!-- js -->
+<script src="js/jquery.min.js"></script>
+<!-- //js -->
+<!-- web font -->
+<link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+<!-- //web font -->
+</head>
+<body> 
+	<div class="w3ls-banner">
+		<div class="center-container"> 
+			
+			<div class="w3ls_banner_info">
+				<div class="container">
+					<div class="w3l_banner_logo">
+						<h2>TF</h2>
+					</div>
+					<h3>Duis aute irure dolor in reprehenderit in voluptate velit</h3>
+					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<div class="more">
+						<a href="#" class="hvr-underline-from-center" data-toggle="modal" data-target="#myModal">Learn More</a>
+					</div>
+					<!-- modal-->
+					<div class="modal video-modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									Today Flats 
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+								</div> 
+								<div class="modal-body">
+									<img src="images/17.jpg" alt=" " class="img-responsive" />
+									<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem  vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
+										<i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur.</i></p>
+								</div> 
+							</div>
+						</div>
+					</div> <!-- //modal-->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- about -->
+	
+</br>
 
-<div class="row">
+
+
+<div class="container">
+
+
+
 
  
 
@@ -9,4 +79,3 @@
 
  
 </div>
-
