--- a/app/assets/stylesheets/publication.scss
+++ b/app/assets/stylesheets/publication.scss
@@ -1,16 +1,28 @@
-.publications.index {
-  .card {
+
+.clase1 {
+        font-size: 1.0rem;
+        color: #787878;
+        font-weight: 300;
+        margin-top: 0.3rem;
+        margin-bottom: 0.3rem;
+      }
+
+
+.card-text {
+        font-size: 1.2rem;
+      }
+
+
+
+
+
+.card {
     border: none;
     border-radius: 0;
     border-bottom: 1px solid #181818;
     height: 400px;
     margin-bottom: 20px;
-    .card-topper {
-      height: 200px;
-      width: 100%;
-      background-size: cover;
-      background-position: center;
-    }
+    
 
   
 
@@ -26,29 +38,17 @@
           background-color: #d8d8d8;
         }
       }
-      .card-title {
-        font-size: 1.3rem;
-        margin-bottom: 0.5rem;
-        a {
-          color: black;
-          text-decoration: none;
-        }
-      }
-      .published-date {
-        font-size: 0.8rem;
-        color: #787878;
-        font-weight: 300;
-        margin-top: 0.3rem;
-        margin-bottom: 0.3rem;
-      }
-      .card-text {
-        font-size: 0.9rem;
-      }
+      
     }
   }
-}
 
-.posts.edit, .posts.new {
+
+
+
+
+
+
+.publications.edit, .publications.new {
   .card {
     .card-block {
   
