--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,27 @@
             <span class="menu"><img src="images/menu.png" alt=" " /></span>
             <nav class="link-effect-3" id="link-effect-3">
               <ul class="nav1 nav">
-                <li class="active"><a data-hover="Home" href="index.html">Home</a></li>
+                <li ><%= link_to "Home", root_path %></li>
+                <li ><%= link_to "Buscar Aviso", publications_path %></li>
+                
+
+                <%if user_signed_in? %>
+
+                <li ><%= link_to "Cerrar Sesion", destroy_user_session_path , method: :delete %></li>
+
+
+                <%else%>
+
+                <li ><%= link_to "Iniciar Sesion", new_user_session_path  %>
+                <li ><%= link_to "Crear Cuenta", new_user_registration_path  %>
+
+
+
+
+
+
+                <%end%>
+                  
                 <li><a href="#about" class="scroll" data-hover="About">Nosotros</a></li>
                 <li><a href="#agents" class="scroll" data-hover="Agents">Contacto</a></li> 
         
