--- a/app/views/publications/_publication.html.erb
+++ b/app/views/publications/_publication.html.erb
@@ -1,18 +1,146 @@
-<div class='col-sm-6 col-lg-4'>
-  <div class="card">
-    <div class="card-topper" ><%= link_to (image_tag publication.image.url(:medium)), publication%></div>
+
+<!DOCTYPE html>
+<html>
+  <head>
+
+
+  	<style>
+
+  	/**** BASE ****/
+body {
+    color: #888;   
+}
+a {
+    color: #03a1d1;
+    text-decoration: none!important;
+}
+
+/**** LAYOUT ****/
+.list-inline>li {
+    padding: 0 10px 0 0;
+}
+.container-pad {
+    padding: 30px 15px;
+}
+
+
+/**** MODULE ****/
+.bgc-fff {
+    background-color: #fff!important;
+}
+.box-shad {
+    -webkit-box-shadow: 1px 1px 0 rgba(0,0,0,.2);
+    box-shadow: 1px 1px 0 rgba(0,0,0,.2);
+}
+.brdr {
+    border: 1px solid #ededed;
+}
+
+/* Font changes */
+.fnt-smaller {
+    font-size: .9em;
+}
+.fnt-lighter {
+    color: #bbb;
+}
+
+/* Padding - Margins */
+.pad-10 {
+    padding: 10px!important;
+}
+.mrg-0 {
+    margin: 0!important;
+}
+.btm-mrg-10 {
+    margin-bottom: 10px!important;
+}
+.btm-mrg-20 {
+    margin-bottom: 20px!important;
+}
+
+/* Color  */
+.clr-535353 {
+    color: #535353;
+}
 
 
 
-    <div class="card-block">
-      <h4 class="card-title"><%= link_to publication.titulo, publication %></h4>
 
-     
-      <p class="clase1"><%= publication.display_day_published %> </p>
-      <p class="card-text"><%= truncate(publication.descripcion, length: 130) %></p>
-     
+/**** MEDIA QUERIES ****/
+@media only screen and (max-width: 991px) {
+    #property-listings .property-listing {
+        padding: 5px!important;
+    }
+    #property-listings .property-listing a {
+        margin: 0;
+    }
+    #property-listings .property-listing .media-body {
+        padding: 10px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    #property-listings .property-listing img {
+        max-width: 180px;
+    }
+}
+
+  	</style>
+
+  	</head>
+
+
+  	<body>
+
+
+
+
+
+      
+            
+            
+            
+                <div class="col-sm-2"> 
+
+                    <!-- Begin Listing: 609 W GRAVERS LN-->
+                    <div class="brdr bgc-fff pad-10 box-shad btm-mrg-20 property-listing">
+                        <div class="media">
+                            <a class="pull-left" href="#" target="_parent">
+                           <%= link_to (image_tag publication.image.url(:thumb)), publication %></a>
+
+                            <div class="clearfix visible-sm"></div>
+
+                            <div class="media-body fnt-smaller">
+                                <a href="#" target="_parent"></a>
+
+                                <h4 class="media-heading">
+                                  <a href="#" target="_parent">$<%= publication.precio %> </a></h4>
+
+
+                                <ul class="list-inline mrg-0 btm-mrg-10 clr-535353">
+                                    <li><%= publication.superficie %> Mt2</li>
+
+                                    <li style="list-style: none">|</li>
+
+                                    <li><%= publication.dormitorio %> Dormitorios</li>
+
+                                    <li style="list-style: none">|</li>
+
+                                    <li><%= publication.baño %> Baños</li>
+                                </ul>
+
+                                <p class="hidden-xs"><%= truncate(publication.descripcion, length: 130) %></p><span class="fnt-smaller fnt-lighter fnt-arial"><%= publication.display_day_published %></span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div><!-- End row -->
+        
     </div>
-  </div>
-</div>
 
 
+
+</body>
+</html>
