MOdificacion usuario logueado y vista mis avisos

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,20 +6,36 @@
           <div class="navigation-right">
             <span class="menu"><img src="images/menu.png" alt=" " /></span>
             <nav class="link-effect-3" id="link-effect-3">
+
+             <%if user_signed_in? %>
+
+
+              <ul >
+
+                <%= image_tag("profile.png",size: "20x20") %> <li class="size-email"> Bienvenido <%= current_user.nombre %> </li>      <li class="size-cerrar"> | </li>
+
+                <li class="size-cerrar" ><%= link_to "Cerrar Sesion", destroy_user_session_path , method: :delete %></li> <li class="size-cerrar">| </li>
+
+                <li class="size-cerrar"><%= link_to "Mis Avisos", misavisos_path%></li>
+
+              </ul>
+
+              <%end%>
+
               <ul class="nav1 nav">
-                <li ><%= link_to "Home", root_path %></li>
-                <li ><%= link_to "Buscar Aviso", publications_path %></li>
+                <li ><%= link_to "HOME", root_path %></li>
+                <li ><%= link_to "BUSCAR AVISO", publications_path %></li>
                 
 
                 <%if user_signed_in? %>
 
-                <li ><%= link_to "Cerrar Sesion", destroy_user_session_path , method: :delete %></li>
+                
 
 
                 <%else%>
 
-                <li ><%= link_to "Iniciar Sesion", new_user_session_path  %>
-                <li ><%= link_to "Crear Cuenta", new_user_registration_path  %>
+                <li ><%= link_to "INICIAR SESION", new_user_session_path  %>
+                <li ><%= link_to "CREAR CUENTA", new_user_registration_path  %>
 
 
 
@@ -28,10 +44,12 @@
 
                 <%end%>
                   
-                <li><a href="#about" class="scroll" data-hover="About">Nosotros</a></li>
-                <li><a href="#agents" class="scroll" data-hover="Agents">Contacto</a></li> 
+                <li><a href="#about" class="scroll" data-hover="About">NOSOTROS</a></li>
+                <li><a href="#agents" class="scroll" data-hover="Agents">CONTACTO</a></li> 
         
               </ul>
+
+           
             </nav>
               <!-- script-for-menu -->
               <script>
