--- a/app/assets/stylesheets/smoothbox.css
+++ b/app/assets/stylesheets/smoothbox.css
@@ -18,6 +18,41 @@ body, html {
     width:100%;
     z-index: 9999;
 }
+
+
+
+
+
+
+
+
+.size-email {
+
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #E9E9E9;
+
+}
+
+.size-cerrar {
+
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #E9E9E9;
+    text-transform: capitalize;
+
+}
+
+
+
+
+
+
+
+
+
+
+
 /* wrapper after loading */
 .sb-load {
     background:url('images/load.gif') center no-repeat rgba(0,0,0,.9);
