--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,13 +11,18 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *=require bootstrap-select
  *= require_tree .
  *= require_self
+
 
 
  */
 
   @import "bootstrap";
+  @Import 'bootstrap-select';
+
+
 
 
 
