--- a/app/assets/stylesheets/publication.scss
+++ b/app/assets/stylesheets/publication.scss
@@ -12,7 +12,15 @@
         font-size: 1.2rem;
       }
 
-
+.img-circular{
+ width: 200px;
+ height: 200px;
+ background-size: cover;
+ display: block;
+ border-radius: 100px;
+ -webkit-border-radius: 100px;
+ -moz-border-radius: 100px;
+ }
 
 
 
